--- a/package.json
+++ b/package.json
@@ -1,91 +1,92 @@
 {
-    "name": "minimized-react-ts-tailwindcss-template",
-    "version": "1.0.0",
-    "description": "A minimized React-TypeScript-TailwindCSS template",
-    "repository": "https://github.com/EUGinsane/minimized-react-ts-tailwindcss-template.git",
-    "author": "Hoang Trinh <hoangtrinh.dev@gmail.com>",
-    "private": true,
-    "scripts": {
-      "dev": "webpack serve --config webpack.dev.ts --open",
-      "build": "NODE_ENV=production webpack --config webpack.prod.ts",
-      "format": "prettier --write ./**/*.{tsx,ts}",
-      "lint": "eslint ./**/*.{tsx,ts}",
-      "lint:fix": "yarn lint --fix",
-      "test": "jest --coverage"
+  "name": "minimized-react-ts-tailwindcss-template",
+  "version": "1.0.0",
+  "description": "A minimized React-TypeScript-TailwindCSS template",
+  "repository": "https://github.com/EUGinsane/minimized-react-ts-tailwindcss-template.git",
+  "author": "Hoang Trinh <hoangtrinh.dev@gmail.com>",
+  "private": true,
+  "scripts": {
+    "dev": "webpack serve --config webpack.dev.ts --open",
+    "build": "NODE_ENV=production webpack --config webpack.prod.ts",
+    "format": "prettier --write ./**/*.{tsx,ts}",
+    "lint": "eslint ./**/*.{tsx,ts}",
+    "lint:fix": "yarn lint --fix",
+    "test": "jest --coverage"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
     },
-    "jest": {
-      "roots": [
-        "<rootDir>/src"
-      ],
-      "transform": {
-        "^.+\\.tsx?$": "ts-jest"
-      },
-      "moduleNameMapper": {
-        "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.ts",
-        "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.ts"
-      }
-    },
-    "babel": {
-      "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
-      ]
-    },
-    "husky": {
-      "hooks": {
-        "pre-commit": "yarn lint-staged --verbose"
-      }
-    },
-    "lint-staged": {
-      "*.{ts,tsx}": [
-        "eslint --fix"
-      ]
-    },
-    "dependencies": {
-      "react": "^17.0.2",
-      "react-dom": "^17.0.2"
-    },
-    "devDependencies": {
-      "@babel/preset-env": "^7.14.1",
-      "@babel/preset-react": "^7.13.13",
-      "@testing-library/jest-dom": "^5.12.0",
-      "@testing-library/react": "^11.2.6",
-      "@types/css-minimizer-webpack-plugin": "^1.3.0",
-      "@types/jest": "^26.0.23",
-      "@types/mini-css-extract-plugin": "^1.4.3",
-      "@types/node": "^15.0.2",
-      "@types/react": "^17.0.5",
-      "@types/react-dom": "^17.0.3",
-      "@types/tailwindcss": "^2.0.3",
-      "@types/terser-webpack-plugin": "^5.0.3",
-      "@types/webpack": "^5.28.0",
-      "@types/webpack-dev-server": "3.11.1",
-      "@types/webpack-merge": "^5.0.0",
-      "autoprefixer": "^10.2.5",
-      "babel-jest": "^26.6.3",
-      "clean-webpack-plugin": "^4.0.0-alpha.0",
-      "css-loader": "^5.2.4",
-      "css-minimizer-webpack-plugin": "^2.0.0",
-      "eslint": "^7.25.0",
-      "eslint-config-airbnb-typescript-prettier": "^4.2.0",
-      "html-webpack-plugin": "^5.3.1",
-      "husky": "^6.0.0",
-      "jest": "^26.6.3",
-      "mini-css-extract-plugin": "^1.6.0",
-      "postcss": "^8.2.14",
-      "postcss-import": "^14.0.1",
-      "postcss-loader": "^5.2.0",
-      "prettier": "^2.2.1",
-      "tailwindcss": "^2.1.2",
-      "terser-webpack-plugin": "^5.1.1",
-      "ts-jest": "^26.5.6",
-      "ts-loader": "^9.1.2",
-      "ts-node": "^9.1.1",
-      "typescript": "^4.2.4",
-      "webpack": "^5.36.2",
-      "webpack-cli": "^4.7.0",
-      "webpack-dev-server": "^3.11.2",
-      "webpack-merge": "^5.7.3"
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.ts",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.ts"
     }
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-staged --verbose"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/copy-webpack-plugin": "^8.0.0",
+    "@types/css-minimizer-webpack-plugin": "^1.3.0",
+    "@types/jest": "^26.0.23",
+    "@types/mini-css-extract-plugin": "^1.4.3",
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "@types/tailwindcss": "^2.0.3",
+    "@types/terser-webpack-plugin": "^5.0.3",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "3.11.1",
+    "@types/webpack-merge": "^5.0.0",
+    "autoprefixer": "^10.2.5",
+    "babel-jest": "^26.6.3",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-typescript-prettier": "^4.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.2.14",
+    "postcss-import": "^14.0.1",
+    "postcss-loader": "^5.2.0",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.1.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.1.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
-  
+}
